--- a/IC.ipynb
+++ b/IC.ipynb
@@ -162,7 +162,8 @@
     "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest.sav')\n",
     "\n",
     "print(f'Training Time Random Forest: {tempo_random_forest}')\n",
-    "pred_random_forest = regr_random_forest.predict(X_test)\n"
+    "pred_random_forest = regr_random_forest.predict(X_test)\n",
+    "print(f'NMAE: {nmae(pred_random_forest, y_test[\"DispFrames\"])}')"
    ]
   },
   {
@@ -185,44 +186,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "28eefed0-c946-407d-a114-abff161e00b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Only dataset X_flow.csv\n",
+      "Training Time only X_flow.csv Reg Tree: 0.3066692352294922\n",
+      "NMAE only X_flow.csv: 0.11325286084708491\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time Random Forest only X_flow.csv: 3.2016818523406982\n",
+      "NMAE only X_flow.csv: 0.10733201366994324\n"
+     ]
+    }
+   ],
+   "source": [
+    "## para X_flow ou x_port\n",
+    "\n",
+    "x_file = 'X_flow.csv' \n",
+    "\n",
+    "print(f'Only dataset {x_file}')\n",
+    "x_trace_minimal_flow = pd.DataFrame()\n",
+    "\n",
+    "x_trace_minimal_flow = pd.read_csv(f'{VOD_SINGLEAPP_PERIODIC_LOAD_PATH}/{x_file}', \n",
+    "                          header=0, index_col=0, low_memory=True, nrows=NROWS).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
+    "\n",
+    "X_train_flow, X_test_flow, y_train_flow, y_test_flow = train_test_split(x_trace_minimal_flow, y_dataset, test_size=0.7, random_state=42)\n",
+    "\n",
+    "regression_tree_flow = DecisionTreeRegressor() \n",
+    "\n",
+    "tempo_reg_tree_flow = time.time()\n",
+    "regression_tree_flow.fit(X_train_flow, y_train_flow)\n",
+    "tempo_reg_tree_flow = time.time() - tempo_reg_tree_flow\n",
+    "\n",
+    "if PERSIST:\n",
+    "    joblib.dump(regression_tree_flow, f'{MODELS_PATH_PREFIX}_model_regression-tree_for-{x_file}.sav')\n",
+    "\n",
+    "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_flow}')\n",
+    "pred_reg_tree_flow = regression_tree_flow.predict(X_test_flow)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_flow, y_test[\"DispFrames\"])}')\n",
+    "\n",
+    "regr_random_forest_flow = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "tempo_random_forest_flow = time.time()\n",
+    "regr_random_forest_flow.fit(X_train_flow, y_train_flow)\n",
+    "tempo_random_forest_flow = time.time() - tempo_random_forest_flow\n",
+    "\n",
+    "if PERSIST:\n",
+    "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
+    "\n",
+    "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_flow}')\n",
+    "pred_random_forest_flow = regr_random_forest_flow.predict(X_test_flow)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_flow, y_test[\"DispFrames\"])}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "990560b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nmae_random_forest_regression_tree(X, Y) -> tuple:\n",
-    "    print(\"Splitando em testes\")\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.7, random_state=42)\n",
-    "    \n",
-    "    print(\"Treinando Decision tree\")\n",
-    "    regression_tree = DecisionTreeRegressor() # a classification or regression decision tree is used as a predictive model to draw conclusions about a set of observations. \n",
-    "    regression_tree.fit(X_train, y_train)\n",
+    "#'X_port.csv'\n",
     "\n",
-    "    joblib.dump(regression_tree, f'{MODELS_PATH_PREFIX}_model_regression-tree.sav')\n",
+    "x_file = 'X_port.csv' \n",
     "\n",
-    "    print(\"Treinando random forest\")\n",
-    "    regr_random_forest = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
-    "    regr_random_forest.fit(X_train, y_train)\n",
+    "print(f'Only dataset {x_file}')\n",
+    "x_trace_minimal_flow = pd.DataFrame()\n",
     "\n",
-    "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest.sav')\n",
+    "x_trace_minimal_flow = pd.read_csv(f'{VOD_SINGLEAPP_PERIODIC_LOAD_PATH}/{x_file}', \n",
+    "                          header=0, index_col=0, low_memory=True, nrows=NROWS).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
     "\n",
-    "    y_random_forest = regr_random_forest.predict(X_test)\n",
-    "    y_reg_tree = regression_tree.predict(X_test)\n",
-    "    \n",
-    "    return (nmae(y_random_forest, y_test), nmae(y_reg_tree, y_test))\n",
+    "X_train_flow, X_test_flow, y_train_flow, y_test_flow = train_test_split(x_trace_minimal_flow, y_dataset, test_size=0.7, random_state=42)\n",
     "\n",
+    "regression_tree_flow = DecisionTreeRegressor() \n",
     "\n",
-    "def get_correlated_columns(x_file, group_column, y_dataset, correlation, Y_METRIC=Y_METRIC):\n",
-    "    column_dataset = pd.read_csv(f'{VOD_SINGLEAPP_PERIODIC_LOAD_PATH}/{x_file}', index_col=0, usecols=np.append(['TimeStamp'], group_column),nrows=NROWS).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
-    "    for column in group_column:\n",
-    "        corr_to_y = abs(column_dataset[column].corr(y_dataset[Y_METRIC]))\n",
-    "        if corr_to_y > correlation:\n",
-    "            print(f'{column} abs corr to y {corr_to_y}, putting on x_trace')\n",
-    "        else:\n",
-    "            column_dataset = column_dataset.drop([column], axis=1)\n",
-    "    if column_dataset.isnull().values.any():\n",
-    "        print(column_dataset.columns.to_list())\n",
-    "    return column_dataset\n",
+    "tempo_reg_tree_flow = time.time()\n",
+    "regression_tree_flow.fit(X_train_flow, y_train_flow)\n",
+    "tempo_reg_tree_flow = time.time() - tempo_reg_tree_flow\n",
+    "\n",
+    "if PERSIST:\n",
+    "    joblib.dump(regression_tree_flow, f'{MODELS_PATH_PREFIX}_model_regression-tree_for-{x_file}.sav')\n",
+    "\n",
+    "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_flow}')\n",
+    "pred_reg_tree_flow = regression_tree_flow.predict(X_test_flow)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_flow, y_test[\"DispFrames\"])}')\n",
+    "\n",
+    "regr_random_forest_flow = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "tempo_random_forest_flow = time.time()\n",
+    "regr_random_forest_flow.fit(X_train_flow, y_train_flow)\n",
+    "tempo_random_forest_flow = time.time() - tempo_random_forest_flow\n",
+    "\n",
+    "if PERSIST:\n",
+    "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
+    "\n",
+    "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_flow}')\n",
+    "pred_random_forest_flow = regr_random_forest_flow.predict(X_test_flow)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_flow, y_test[\"DispFrames\"])}')\n",
     "\n"
    ]
   }
