adicionado para xflow e xport

--- a/IC.ipynb
+++ b/IC.ipynb
@@ -249,7 +249,7 @@
     "tempo_random_forest_flow = time.time() - tempo_random_forest_flow\n",
     "\n",
     "if PERSIST:\n",
-    "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
+    "    joblib.dump(regr_random_forest_flow, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
     "\n",
     "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_flow}')\n",
     "pred_random_forest_flow = regr_random_forest_flow.predict(X_test_flow)\n",
@@ -259,50 +259,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "990560b9",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "id": "fd05523d",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Only dataset X_port.csv\n",
+      "Training Time only X_port.csv Reg Tree: 2.628509044647217\n",
+      "NMAE only X_port.csv: 0.11026255886288207\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time Random Forest only X_port.csv: 25.735234260559082\n",
+      "NMAE only X_port.csv: 0.10501668143668873\n"
+     ]
+    }
+   ],
    "source": [
     "#'X_port.csv'\n",
     "\n",
     "x_file = 'X_port.csv' \n",
     "\n",
     "print(f'Only dataset {x_file}')\n",
-    "x_trace_minimal_flow = pd.DataFrame()\n",
+    "x_trace_minimal_port = pd.DataFrame()\n",
     "\n",
-    "x_trace_minimal_flow = pd.read_csv(f'{VOD_SINGLEAPP_PERIODIC_LOAD_PATH}/{x_file}', \n",
+    "x_trace_minimal_port = pd.read_csv(f'{VOD_SINGLEAPP_PERIODIC_LOAD_PATH}/{x_file}', \n",
     "                          header=0, index_col=0, low_memory=True, nrows=NROWS).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
     "\n",
-    "X_train_flow, X_test_flow, y_train_flow, y_test_flow = train_test_split(x_trace_minimal_flow, y_dataset, test_size=0.7, random_state=42)\n",
+    "X_train_port, X_test_port, y_train_port, y_test_port = train_test_split(x_trace_minimal_port, y_dataset, test_size=0.7, random_state=42)\n",
     "\n",
-    "regression_tree_flow = DecisionTreeRegressor() \n",
+    "regression_tree_port = DecisionTreeRegressor() \n",
     "\n",
-    "tempo_reg_tree_flow = time.time()\n",
-    "regression_tree_flow.fit(X_train_flow, y_train_flow)\n",
-    "tempo_reg_tree_flow = time.time() - tempo_reg_tree_flow\n",
-    "\n",
-    "if PERSIST:\n",
-    "    joblib.dump(regression_tree_flow, f'{MODELS_PATH_PREFIX}_model_regression-tree_for-{x_file}.sav')\n",
-    "\n",
-    "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_flow}')\n",
-    "pred_reg_tree_flow = regression_tree_flow.predict(X_test_flow)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_flow, y_test[\"DispFrames\"])}')\n",
-    "\n",
-    "regr_random_forest_flow = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
-    "\n",
-    "tempo_random_forest_flow = time.time()\n",
-    "regr_random_forest_flow.fit(X_train_flow, y_train_flow)\n",
-    "tempo_random_forest_flow = time.time() - tempo_random_forest_flow\n",
+    "tempo_reg_tree_port = time.time()\n",
+    "regression_tree_port.fit(X_train_port, y_train_port)\n",
+    "tempo_reg_tree_port = time.time() - tempo_reg_tree_port\n",
     "\n",
     "if PERSIST:\n",
-    "    joblib.dump(regr_random_forest, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
+    "    joblib.dump(regression_tree_port, f'{MODELS_PATH_PREFIX}_model_regression-tree_for-{x_file}.sav')\n",
     "\n",
-    "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_flow}')\n",
-    "pred_random_forest_flow = regr_random_forest_flow.predict(X_test_flow)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_flow, y_test[\"DispFrames\"])}')\n",
+    "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_port}')\n",
+    "pred_reg_tree_port = regression_tree_port.predict(X_test_port)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_port, y_test[\"DispFrames\"])}')\n",
+    "\n",
+    "regr_random_forest_port = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "tempo_random_forest_port = time.time()\n",
+    "regr_random_forest_port.fit(X_train_port, y_train_port)\n",
+    "tempo_random_forest_port = time.time() - tempo_random_forest_port\n",
+    "\n",
+    "if PERSIST:\n",
+    "    joblib.dump(regr_random_forest_port, f'{MODELS_PATH_PREFIX}_model_random-forest_for-{x_file}.sav')\n",
+    "\n",
+    "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_port}')\n",
+    "pred_random_forest_port = regr_random_forest_port.predict(X_test_port)\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_port, y_test[\"DispFrames\"])}')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ce33206",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
