fix typos pro test

--- a/IC.ipynb
+++ b/IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6d47c40e-e69f-4d6a-a85e-ba7f35cd4fe1",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9dee48d8-20bb-4da9-8e34-2ab1a11c574e",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b23f21b9-7ac8-4d1e-aaa9-28279ff36915",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2975c95a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "7281f72f",
    "metadata": {},
    "outputs": [
@@ -108,8 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Time Reg Tree: 32.23722505569458\n",
-      "NMAE: 0.10112599697648961\n"
+      "Training Time Reg Tree: 30.377418994903564\n",
+      "NMAE: 0.10097482145649794\n"
      ]
     }
    ],
@@ -131,23 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "8f662847",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Time Random Forest: 320.60004210472107\n"
+      "Training Time Random Forest: 316.3492383956909\n",
+      "NMAE: 0.0934177251849149\n"
      ]
     }
    ],
@@ -168,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "e806922e",
    "metadata": {},
    "outputs": [
@@ -186,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "28eefed0-c946-407d-a114-abff161e00b1",
    "metadata": {},
    "outputs": [
@@ -195,23 +188,9 @@
      "output_type": "stream",
      "text": [
       "Only dataset X_flow.csv\n",
-      "Training Time only X_flow.csv Reg Tree: 0.3066692352294922\n",
-      "NMAE only X_flow.csv: 0.11325286084708491\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time Random Forest only X_flow.csv: 3.2016818523406982\n",
+      "Training Time only X_flow.csv Reg Tree: 0.27922868728637695\n",
+      "NMAE only X_flow.csv: 0.11336464964156148\n",
+      "Training Time Random Forest only X_flow.csv: 3.130889415740967\n",
       "NMAE only X_flow.csv: 0.10733201366994324\n"
      ]
     }
@@ -240,7 +219,7 @@
     "\n",
     "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_flow}')\n",
     "pred_reg_tree_flow = regression_tree_flow.predict(X_test_flow)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_flow, y_test[\"DispFrames\"])}')\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_flow, y_test_flow[\"DispFrames\"])}')\n",
     "\n",
     "regr_random_forest_flow = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
     "\n",
@@ -253,13 +232,13 @@
     "\n",
     "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_flow}')\n",
     "pred_random_forest_flow = regr_random_forest_flow.predict(X_test_flow)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_flow, y_test[\"DispFrames\"])}')\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_flow, y_test_flow[\"DispFrames\"])}')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "2f36c686",
    "metadata": {
     "scrolled": false
@@ -270,23 +249,9 @@
      "output_type": "stream",
      "text": [
       "Only dataset X_port.csv\n",
-      "Training Time only X_port.csv Reg Tree: 2.628509044647217\n",
-      "NMAE only X_port.csv: 0.11026255886288207\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time Random Forest only X_port.csv: 25.735234260559082\n",
+      "Training Time only X_port.csv Reg Tree: 2.415618658065796\n",
+      "NMAE only X_port.csv: 0.11017393873047318\n",
+      "Training Time Random Forest only X_port.csv: 24.239320993423462\n",
       "NMAE only X_port.csv: 0.10501668143668873\n"
      ]
     }
@@ -315,7 +280,7 @@
     "\n",
     "print(f'Training Time only {x_file} Reg Tree: {tempo_reg_tree_port}')\n",
     "pred_reg_tree_port = regression_tree_port.predict(X_test_port)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_port, y_test[\"DispFrames\"])}')\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_reg_tree_port, y_test_port[\"DispFrames\"])}')\n",
     "\n",
     "regr_random_forest_port = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
     "\n",
@@ -328,7 +293,7 @@
     "\n",
     "print(f'Training Time Random Forest only {x_file}: {tempo_random_forest_port}')\n",
     "pred_random_forest_port = regr_random_forest_port.predict(X_test_port)\n",
-    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_port, y_test[\"DispFrames\"])}')\n",
+    "print(f'NMAE only {x_file}: {nmae(pred_random_forest_port, y_test_port[\"DispFrames\"])}')\n",
     "\n"
    ]
   },
@@ -357,20 +322,19 @@
     "    regression_tree_minimal.fit(X_train_minimal, y_train_minimal)\n",
     "    pred_reg_tree_minimal = regression_tree_minimal.predict(X_test_minimal)\n",
     "    \n",
-    "    new_nmae_reg_tree = nmae(pred_reg_tree_minimal, y_test[\"DispFrames\"])\n",
+    "    new_nmae_reg_tree = nmae(pred_reg_tree_minimal, y_test_minimal[\"DispFrames\"])\n",
     "\n",
     "    random_forest_minimal = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
     "    random_forest_minimal.fit(X_train_minimal, y_train_minimal)\n",
     "    pred_random_forest_minimal = random_forest_minimal.predict(X_test_minimal)\n",
     "    \n",
-    "    new_nmae_random_forest = nmae(pred_random_forest_minimal, y_test[\"DispFrames\"])\n",
+    "    new_nmae_random_forest = nmae(pred_random_forest_minimal, y_test_minimal[\"DispFrames\"])\n",
     "     \n",
     "    if old_reg_tree_nmae >= new_nmae_reg_tree or old_random_forest_nmae >= new_nmae_random_forest:\n",
     "        old_reg_tree_nmae = new_nmae_reg_tree if new_nmae_reg_tree < old_reg_tree_nmae else old_reg_tree_nmae\n",
     "        old_random_forest_nmae = new_nmae_random_forest if new_nmae_random_forest < old_random_forest_nmae else old_random_forest_nmae\n",
     "    else:\n",
-    "        x_trace_minimal.drop([column], axis=1, inplace=True)\n",
-    "    "
+    "        x_trace_minimal.drop([column], axis=1, inplace=True)\n"
    ]
   },
   {
