testing many values, thinking it is overfit

--- a/IC.ipynb
+++ b/IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6d47c40e-e69f-4d6a-a85e-ba7f35cd4fe1",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9dee48d8-20bb-4da9-8e34-2ab1a11c574e",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b23f21b9-7ac8-4d1e-aaa9-28279ff36915",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2975c95a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "7281f72f",
    "metadata": {},
    "outputs": [
@@ -108,8 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Time Reg Tree: 30.377418994903564\n",
-      "NMAE: 0.10097482145649794\n"
+      "Training Time Reg Tree: 32.21946382522583\n",
+      "NMAE: 0.10037706997515161\n"
      ]
     }
    ],
@@ -131,15 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "8f662847",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Time Random Forest: 316.3492383956909\n",
+      "Training Time Random Forest: 308.4941403865814\n",
       "NMAE: 0.0934177251849149\n"
      ]
     }
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "e806922e",
    "metadata": {},
    "outputs": [
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "28eefed0-c946-407d-a114-abff161e00b1",
    "metadata": {},
    "outputs": [
@@ -188,9 +196,23 @@
      "output_type": "stream",
      "text": [
       "Only dataset X_flow.csv\n",
-      "Training Time only X_flow.csv Reg Tree: 0.27922868728637695\n",
-      "NMAE only X_flow.csv: 0.11336464964156148\n",
-      "Training Time Random Forest only X_flow.csv: 3.130889415740967\n",
+      "Training Time only X_flow.csv Reg Tree: 0.27962470054626465\n",
+      "NMAE only X_flow.csv: 0.11457965289482779\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time Random Forest only X_flow.csv: 3.1818175315856934\n",
       "NMAE only X_flow.csv: 0.10733201366994324\n"
      ]
     }
@@ -238,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "2f36c686",
    "metadata": {
     "scrolled": false
@@ -249,9 +271,23 @@
      "output_type": "stream",
      "text": [
       "Only dataset X_port.csv\n",
-      "Training Time only X_port.csv Reg Tree: 2.415618658065796\n",
-      "NMAE only X_port.csv: 0.11017393873047318\n",
-      "Training Time Random Forest only X_port.csv: 24.239320993423462\n",
+      "Training Time only X_port.csv Reg Tree: 2.4806292057037354\n",
+      "NMAE only X_port.csv: 0.11184903299796696\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/davi/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time Random Forest only X_port.csv: 27.997825145721436\n",
       "NMAE only X_port.csv: 0.10501668143668873\n"
      ]
     }
@@ -312,8 +348,13 @@
     "x_trace_minimal = pd.DataFrame()\n",
     "old_reg_tree_nmae = 1\n",
     "old_random_forest_nmae = 1\n",
+    "columns_with_sufficient_corr = []\n",
     "\n",
     "for column in x_trace.columns:\n",
+    "    if abs(x_trace[column].corr(y_dataset[Y_METRIC])) > 0.1:\n",
+    "        columns_with_sufficient_corr.append(column)\n",
+    "\n",
+    "for column in columns_with_sufficient_corr:\n",
     "    x_trace_minimal[column] = x_trace[[column]].copy()\n",
     "    \n",
     "    X_train_minimal , X_test_minimal, y_train_minimal, y_test_minimal = train_test_split(x_trace_minimal, y_dataset, test_size=0.7, random_state=42)\n",
@@ -334,7 +375,49 @@
     "        old_reg_tree_nmae = new_nmae_reg_tree if new_nmae_reg_tree < old_reg_tree_nmae else old_reg_tree_nmae\n",
     "        old_random_forest_nmae = new_nmae_random_forest if new_nmae_random_forest < old_random_forest_nmae else old_random_forest_nmae\n",
     "    else:\n",
-    "        x_trace_minimal.drop([column], axis=1, inplace=True)\n"
+    "        x_trace_minimal.drop([column], axis=1, inplace=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17562e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(columns_with_sufficient_corr)\n",
+    "print(len(columns_with_sufficient_corr))\n",
+    "print(x_trace_minimal.columns)\n",
+    "print(len(x_trace_minimal.columns))\n",
+    "\n",
+    "X_train_minimal , X_test_minimal, y_train_minimal, y_test_minimal = train_test_split(x_trace_minimal, y_dataset, test_size=0.7, random_state=42)\n",
+    "\n",
+    "regression_tree_minimal = DecisionTreeRegressor() \n",
+    "\n",
+    "tempo_reg_tree_minimal = time.time()\n",
+    "regression_tree_minimal.fit(X_train_minimal, y_train_minimal)\n",
+    "tempo_reg_tree_minimal = time.time() - tempo_reg_tree_minimal\n",
+    "\n",
+    "\n",
+    "pred_reg_tree_minimal = regression_tree_minimal.predict(X_test_minimal)\n",
+    "\n",
+    "new_nmae_reg_tree = nmae(pred_reg_tree_minimal, y_test_minimal[\"DispFrames\"])\n",
+    "\n",
+    "print(f'MINIMAL NMAE REG_TREE {new_nmae_reg_tree}\\n TRAINING TIME MINIMAL REG_TREE {tempo_reg_tree_minimal}')\n",
+    "\n",
+    "random_forest_minimal = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "tempo_random_forest_minimal = time.time()\n",
+    "random_forest_minimal.fit(X_train_minimal, y_train_minimal)\n",
+    "tempo_random_forest_minimal = time.time() - tempo_random_forest_minimal\n",
+    "\n",
+    "pred_random_forest_minimal = random_forest_minimal.predict(X_test_minimal)\n",
+    "\n",
+    "new_nmae_random_forest = nmae(pred_random_forest_minimal, y_test_minimal[\"DispFrames\"])\n",
+    "\n",
+    "print(f'MINIMAL NMAE RANDOM_FOREST {new_nmae_random_forest}\\n TRAINING TIME MINIMAL RANDOM FOREST {tempo_random_forest_minimal}')"
    ]
   },
   {
@@ -342,8 +425,66 @@
    "execution_count": null,
    "id": "ad374653",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VoD-BothApps-FlashcrowdLoad\n",
+      "['X_cluster.csv', 'X_flow.csv', 'X_port.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRACES=[\n",
+    "    #\"KV-BothApps-FlashcrowdLoad\",\n",
+    "    #\"KV-BothApps-PeriodicLoad\",\n",
+    "    #\"KV-SingleApp-FlashcrowdLoad\",\n",
+    "    #\"KV-SingleApp-PeriodicLoad\",\n",
+    "    \"VoD-BothApps-FlashcrowdLoad\",\n",
+    "    \"VoD-BothApps-PeriodicLoad\",\n",
+    "    \"VoD-SingleApp-FlashcrowdLoad\",\n",
+    "    \"VoD-SingleApp-PeriodicLoad\"]\n",
+    "\n",
+    "for trace in TRACES:\n",
+    "    print(trace)\n",
+    "    y_dataset_trace = pd.read_csv(f'{PASQUINIS_PATH}/{trace}/Y.csv', header=0, nrows=NROWS, index_col=0, usecols=['TimeStamp', 'DispFrames'], low_memory=True).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
+    "\n",
+    "    for x_files in [['X_cluster.csv', 'X_flow.csv', 'X_port.csv'], ['X_port.csv'], ['X_flow.csv']]:\n",
+    "        print(x_files)\n",
+    "        x = pd.DataFrame()\n",
+    "\n",
+    "        for x_file in x_files:\n",
+    "            read_dataset = pd.read_csv(f'{PASQUINIS_PATH}/{trace}/{x_file}', \n",
+    "                                      header=0, index_col=0, low_memory=True, nrows=NROWS).apply(pd.to_numeric, errors='coerce').fillna(0)\n",
+    "            if len(x_trace.columns) != 0:\n",
+    "                x_trace.merge(read_dataset, how=\"inner\",\n",
+    "                    on=\"TimeStamp\", copy=False)\n",
+    "            else:\n",
+    "                x_trace = read_dataset\n",
+    "\n",
+    "        x_training, x_testing, y_training, y_testing = train_test_split(x, y_dataset_trace, test_size=0.7, random_state=42)\n",
+    "\n",
+    "        print('full_x')\n",
+    "        print('regression_method, nmae, training_time')\n",
+    "\n",
+    "        regression_tree_trace = DecisionTreeRegressor() \n",
+    "        tempo_reg_tree_trace = time.time()\n",
+    "        regression_tree_trace.fit(x_training, y_training)\n",
+    "        tempo_reg_tree_trace = time.time() - tempo_reg_tree_trace\n",
+    "        pred_reg_tree_trace = regression_tree_trace.predict(x_testing)\n",
+    "\n",
+    "        print(f'Reg_Tree, {nmae(pred_reg_tree_trace, y_testing[\"DispFrames\"])}, {tempo_reg_tree_trace}')\n",
+    "\n",
+    "        regr_random_forest_trace = RandomForestRegressor(n_estimators=120, random_state=42, n_jobs=-1)\n",
+    "        tempo_random_forest_trace = time.time()\n",
+    "        regr_random_forest_trace.fit(x_training, y_training)\n",
+    "        tempo_random_forest_trace = time.time() - tempo_random_forest\n",
+    "        pred_random_forest_trace = regr_random_forest_trace.predict(x_testing)\n",
+    "\n",
+    "        print(f'Rand_For, {nmae(pred_random_forest_trace, y_testing[\"DispFrames\"])}, {tempo_random_forest_trace}')\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
